@@ -1,5 +1,6 @@
 5.1
 	+ Integrate new SOGo 4.0
+	+ Add warning about ActiveSync mailbox recommended size
 5.0.3
 	+ Allow to send mails using alias
 	+ Better default settings of performance tuning when using ActiveSync
